initial files for Octo projects

--- a/examples/Visualization_test.ipynb
+++ b/examples/Visualization_test.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2025-02-18T20:47:06.751195Z",
-     "end_time": "2025-02-18T20:47:23.892428Z"
+     "start_time": "2025-02-23T14:10:34.537770Z",
+     "end_time": "2025-02-23T14:10:43.135740Z"
     }
    },
    "outputs": [
@@ -17,7 +17,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "f8b98baa69294f0c86f7ef681d89ef65"
+       "model_id": "354c94bbca064e51bb89fcc34171ba30"
       }
      },
      "metadata": {},
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -83,14 +83,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2025-02-19T06:04:15.473133Z",
-     "end_time": "2025-02-19T06:04:23.754178Z"
+     "start_time": "2025-02-23T14:10:45.658612Z",
+     "end_time": "2025-02-23T14:10:56.200142Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -105,7 +105,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "148a6ea03ee8497288e3ed6b1e8ee466"
+       "model_id": "ed240bcebf844bcbb47737732b9bb81c"
       }
      },
      "metadata": {},
@@ -115,7 +115,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:root:'tasks' is missing items compared to example_batch: {'image_wrist', 'pad_mask_dict/timestep', 'timestep', 'pad_mask_dict/image_wrist'}\n"
+      "WARNING:root:'tasks' is missing items compared to example_batch: {'image_wrist', 'pad_mask_dict/timestep', 'pad_mask_dict/image_wrist', 'timestep'}\n"
      ]
     }
    ],
@@ -131,20 +131,23 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2025-02-19T06:48:18.179086Z",
-     "end_time": "2025-02-19T06:48:23.984408Z"
+     "start_time": "2025-02-23T14:11:01.105223Z",
+     "end_time": "2025-02-23T14:11:06.848961Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 37/37 [00:48<00:00,  1.32s/it]\n"
+      "  0%|          | 0/37 [00:00<?, ?it/s]WARNING:root:'observations' is missing items compared to example_batch: {'pad_mask_dict/timestep', 'pad_mask_dict/image_wrist', 'image_wrist', 'timestep', 'pad_mask_dict/image_primary', 'task_completed'}\n",
+      "WARNING:root:No pad_mask_dict found. Nothing will be masked.\n",
+      "WARNING:root:Skipping observation tokenizer: obs_wrist\n",
+      "100%|██████████| 37/37 [00:22<00:00,  1.61it/s]\n"
      ]
     }
    ],
@@ -184,14 +187,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2025-02-19T06:40:18.221622Z",
-     "end_time": "2025-02-19T06:41:06.940722Z"
+     "start_time": "2025-02-23T14:11:12.652384Z",
+     "end_time": "2025-02-23T14:11:35.666255Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "import imageio\n",
@@ -238,21 +241,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2025-02-19T06:44:52.905749Z",
-     "end_time": "2025-02-19T06:44:52.909408Z"
+     "start_time": "2025-02-23T14:11:45.991107Z",
+     "end_time": "2025-02-23T14:11:46.006704Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Step 0 - Layer 0 Attention Map Shape: (1, 256)\n",
-      "Step 0 - Layer 0 Fixed Attention Map Shape: (1, 256)\n",
       "num_patches: 1, grid_size: 1\n"
      ]
     },
@@ -263,8 +265,8 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[54], line 16\u001B[0m\n\u001B[1;32m     12\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mStep \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mstep\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m - Layer \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mlayer_idx\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m Fixed Attention Map Shape: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mattn_map\u001B[38;5;241m.\u001B[39mshape\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     15\u001B[0m \u001B[38;5;66;03m# Overlay attention on the corresponding input image\u001B[39;00m\n\u001B[0;32m---> 16\u001B[0m blended_image \u001B[38;5;241m=\u001B[39m \u001B[43moverlay_attention_on_image\u001B[49m\u001B[43m(\u001B[49m\u001B[43mimages\u001B[49m\u001B[43m[\u001B[49m\u001B[43mstep\u001B[49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mattn_map\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mpatch_size\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mpatch_size\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     18\u001B[0m \u001B[38;5;66;03m# Convert to RGB (for video saving)\u001B[39;00m\n\u001B[1;32m     19\u001B[0m video_frame \u001B[38;5;241m=\u001B[39m cv2\u001B[38;5;241m.\u001B[39mcvtColor(blended_image, cv2\u001B[38;5;241m.\u001B[39mCOLOR_BGR2RGB)\n",
-      "Cell \u001B[0;32mIn[53], line 24\u001B[0m, in \u001B[0;36moverlay_attention_on_image\u001B[0;34m(image, attn_map, patch_size)\u001B[0m\n\u001B[1;32m     20\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mnum_patches: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mnum_patches\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m, grid_size: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mgrid_size\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     23\u001B[0m \u001B[38;5;66;03m# Reshape 1D attention map into a 2D grid\u001B[39;00m\n\u001B[0;32m---> 24\u001B[0m attn_grid \u001B[38;5;241m=\u001B[39m \u001B[43mattn_map\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mreshape\u001B[49m\u001B[43m(\u001B[49m\u001B[43m(\u001B[49m\u001B[43mgrid_size\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mgrid_size\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     26\u001B[0m \u001B[38;5;66;03m# Normalize attention for visualization\u001B[39;00m\n\u001B[1;32m     27\u001B[0m attn_grid \u001B[38;5;241m=\u001B[39m (attn_grid \u001B[38;5;241m-\u001B[39m attn_grid\u001B[38;5;241m.\u001B[39mmin()) \u001B[38;5;241m/\u001B[39m (attn_grid\u001B[38;5;241m.\u001B[39mmax() \u001B[38;5;241m-\u001B[39m attn_grid\u001B[38;5;241m.\u001B[39mmin())\n",
+      "Cell \u001B[0;32mIn[9], line 11\u001B[0m\n\u001B[1;32m      8\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mStep \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mstep\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m - Layer \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mlayer_idx\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m Attention Map Shape: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mattn_map\u001B[38;5;241m.\u001B[39mshape\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     10\u001B[0m \u001B[38;5;66;03m# Overlay attention on the corresponding input image\u001B[39;00m\n\u001B[0;32m---> 11\u001B[0m blended_image \u001B[38;5;241m=\u001B[39m \u001B[43moverlay_attention_on_image\u001B[49m\u001B[43m(\u001B[49m\u001B[43mimages\u001B[49m\u001B[43m[\u001B[49m\u001B[43mstep\u001B[49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mattn_map\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mpatch_size\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mpatch_size\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     13\u001B[0m \u001B[38;5;66;03m# Convert to RGB (for video saving)\u001B[39;00m\n\u001B[1;32m     14\u001B[0m video_frame \u001B[38;5;241m=\u001B[39m cv2\u001B[38;5;241m.\u001B[39mcvtColor(blended_image, cv2\u001B[38;5;241m.\u001B[39mCOLOR_BGR2RGB)\n",
+      "Cell \u001B[0;32mIn[8], line 23\u001B[0m, in \u001B[0;36moverlay_attention_on_image\u001B[0;34m(image, attn_map, patch_size)\u001B[0m\n\u001B[1;32m     19\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mnum_patches: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mnum_patches\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m, grid_size: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mgrid_size\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     22\u001B[0m \u001B[38;5;66;03m# Reshape 1D attention map into a 2D grid\u001B[39;00m\n\u001B[0;32m---> 23\u001B[0m attn_grid \u001B[38;5;241m=\u001B[39m \u001B[43mattn_map\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mreshape\u001B[49m\u001B[43m(\u001B[49m\u001B[43m(\u001B[49m\u001B[43mgrid_size\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mgrid_size\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     25\u001B[0m \u001B[38;5;66;03m# Normalize attention for visualization\u001B[39;00m\n\u001B[1;32m     26\u001B[0m attn_grid \u001B[38;5;241m=\u001B[39m (attn_grid \u001B[38;5;241m-\u001B[39m attn_grid\u001B[38;5;241m.\u001B[39mmin()) \u001B[38;5;241m/\u001B[39m (attn_grid\u001B[38;5;241m.\u001B[39mmax() \u001B[38;5;241m-\u001B[39m attn_grid\u001B[38;5;241m.\u001B[39mmin())\n",
       "\u001B[0;31mValueError\u001B[0m: cannot reshape array of size 256 into shape (1,1)"
      ]
     }
@@ -308,8 +310,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:embodiment_action_dim is highly recommended for diffusion action head if any action dimensions were masked during training\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -325,8 +334,8 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mIndexError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[13], line 32\u001B[0m\n\u001B[1;32m     28\u001B[0m     plt\u001B[38;5;241m.\u001B[39mshow()\n\u001B[1;32m     31\u001B[0m \u001B[38;5;66;03m# Visualize attention for the first transformer layer\u001B[39;00m\n\u001B[0;32m---> 32\u001B[0m \u001B[43mplot_attention\u001B[49m\u001B[43m(\u001B[49m\u001B[43mattention_map\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     34\u001B[0m \u001B[38;5;66;03m### Overlay Attention on Goal Image\u001B[39;00m\n\u001B[1;32m     35\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21moverlay_attention\u001B[39m(img, attn_map):\n",
-      "Cell \u001B[0;32mIn[13], line 15\u001B[0m, in \u001B[0;36mplot_attention\u001B[0;34m(attn_weights, title)\u001B[0m\n\u001B[1;32m     12\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mAttention matrix shape: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mattn_matrix\u001B[38;5;241m.\u001B[39mshape\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     14\u001B[0m \u001B[38;5;66;03m# Reshape to a square if necessary\u001B[39;00m\n\u001B[0;32m---> 15\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[43mattn_matrix\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mshape\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m]\u001B[49m \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m1\u001B[39m:\n\u001B[1;32m     16\u001B[0m     attn_matrix \u001B[38;5;241m=\u001B[39m attn_matrix\u001B[38;5;241m.\u001B[39msqueeze()  \u001B[38;5;66;03m# Remove singleton dimension\u001B[39;00m\n\u001B[1;32m     18\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m attn_matrix\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m0\u001B[39m] \u001B[38;5;241m!=\u001B[39m attn_matrix\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m1\u001B[39m]:\n\u001B[1;32m     19\u001B[0m     \u001B[38;5;66;03m# Resize to a square for proper visualization (modify size as needed)\u001B[39;00m\n",
+      "Cell \u001B[0;32mIn[10], line 32\u001B[0m\n\u001B[1;32m     28\u001B[0m     plt\u001B[38;5;241m.\u001B[39mshow()\n\u001B[1;32m     31\u001B[0m \u001B[38;5;66;03m# Visualize attention for the first transformer layer\u001B[39;00m\n\u001B[0;32m---> 32\u001B[0m \u001B[43mplot_attention\u001B[49m\u001B[43m(\u001B[49m\u001B[43mattention_map\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     34\u001B[0m \u001B[38;5;66;03m### Overlay Attention on Goal Image\u001B[39;00m\n\u001B[1;32m     35\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21moverlay_attention\u001B[39m(img, attn_map):\n",
+      "Cell \u001B[0;32mIn[10], line 15\u001B[0m, in \u001B[0;36mplot_attention\u001B[0;34m(attn_weights, title)\u001B[0m\n\u001B[1;32m     12\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mAttention matrix shape: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mattn_matrix\u001B[38;5;241m.\u001B[39mshape\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     14\u001B[0m \u001B[38;5;66;03m# Reshape to a square if necessary\u001B[39;00m\n\u001B[0;32m---> 15\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[43mattn_matrix\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mshape\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m]\u001B[49m \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m1\u001B[39m:\n\u001B[1;32m     16\u001B[0m     attn_matrix \u001B[38;5;241m=\u001B[39m attn_matrix\u001B[38;5;241m.\u001B[39msqueeze()  \u001B[38;5;66;03m# Remove singleton dimension\u001B[39;00m\n\u001B[1;32m     18\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m attn_matrix\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m0\u001B[39m] \u001B[38;5;241m!=\u001B[39m attn_matrix\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m1\u001B[39m]:\n\u001B[1;32m     19\u001B[0m     \u001B[38;5;66;03m# Resize to a square for proper visualization (modify size as needed)\u001B[39;00m\n",
       "\u001B[0;31mIndexError\u001B[0m: tuple index out of range"
      ]
     }
