Weights adjustment and visualization

--- a/examples/Visualization_test.ipynb
+++ b/examples/Visualization_test.ipynb
@@ -248,26 +248,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Step 0 - Layer 0 Attention Map Shape: (1, 256)\n",
-      "num_patches: 1, grid_size: 1\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "cannot reshape array of size 256 into shape (1,1)",
+     "ename": "KeyError",
+     "evalue": "'all'",
      "output_type": "error",
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[9], line 11\u001B[0m\n\u001B[1;32m      8\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mStep \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mstep\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m - Layer \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mlayer_idx\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m Attention Map Shape: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mattn_map\u001B[38;5;241m.\u001B[39mshape\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     10\u001B[0m \u001B[38;5;66;03m# Overlay attention on the corresponding input image\u001B[39;00m\n\u001B[0;32m---> 11\u001B[0m blended_image \u001B[38;5;241m=\u001B[39m \u001B[43moverlay_attention_on_image\u001B[49m\u001B[43m(\u001B[49m\u001B[43mimages\u001B[49m\u001B[43m[\u001B[49m\u001B[43mstep\u001B[49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mattn_map\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mpatch_size\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mpatch_size\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     13\u001B[0m \u001B[38;5;66;03m# Convert to RGB (for video saving)\u001B[39;00m\n\u001B[1;32m     14\u001B[0m video_frame \u001B[38;5;241m=\u001B[39m cv2\u001B[38;5;241m.\u001B[39mcvtColor(blended_image, cv2\u001B[38;5;241m.\u001B[39mCOLOR_BGR2RGB)\n",
-      "Cell \u001B[0;32mIn[8], line 23\u001B[0m, in \u001B[0;36moverlay_attention_on_image\u001B[0;34m(image, attn_map, patch_size)\u001B[0m\n\u001B[1;32m     19\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mnum_patches: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mnum_patches\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m, grid_size: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mgrid_size\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     22\u001B[0m \u001B[38;5;66;03m# Reshape 1D attention map into a 2D grid\u001B[39;00m\n\u001B[0;32m---> 23\u001B[0m attn_grid \u001B[38;5;241m=\u001B[39m \u001B[43mattn_map\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mreshape\u001B[49m\u001B[43m(\u001B[49m\u001B[43m(\u001B[49m\u001B[43mgrid_size\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mgrid_size\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     25\u001B[0m \u001B[38;5;66;03m# Normalize attention for visualization\u001B[39;00m\n\u001B[1;32m     26\u001B[0m attn_grid \u001B[38;5;241m=\u001B[39m (attn_grid \u001B[38;5;241m-\u001B[39m attn_grid\u001B[38;5;241m.\u001B[39mmin()) \u001B[38;5;241m/\u001B[39m (attn_grid\u001B[38;5;241m.\u001B[39mmax() \u001B[38;5;241m-\u001B[39m attn_grid\u001B[38;5;241m.\u001B[39mmin())\n",
-      "\u001B[0;31mValueError\u001B[0m: cannot reshape array of size 256 into shape (1,1)"
+      "\u001B[0;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[12], line 6\u001B[0m\n\u001B[1;32m      3\u001B[0m patch_size \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m16\u001B[39m  \u001B[38;5;66;03m# Adjust based on ViT config\u001B[39;00m\n\u001B[1;32m      5\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m step \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(attention_maps_per_step)):\n\u001B[0;32m----> 6\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m layer_idx \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(\u001B[43mattention_maps_per_step\u001B[49m\u001B[43m[\u001B[49m\u001B[43mstep\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mall\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m]\u001B[49m)):  \u001B[38;5;66;03m# Iterate over all layers\u001B[39;00m\n\u001B[1;32m      7\u001B[0m         attn_map \u001B[38;5;241m=\u001B[39m attention_maps_per_step[step][\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mall\u001B[39m\u001B[38;5;124m\"\u001B[39m][layer_idx]\n\u001B[1;32m      8\u001B[0m         \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mStep \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mstep\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m - Layer \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mlayer_idx\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m Attention Map Shape: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mattn_map\u001B[38;5;241m.\u001B[39mshape\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n",
+      "\u001B[0;31mKeyError\u001B[0m: 'all'"
      ]
     }
    ],
@@ -277,32 +268,32 @@
     "patch_size = 16  # Adjust based on ViT config\n",
     "\n",
     "for step in range(len(attention_maps_per_step)):\n",
-    "    for layer_idx in range(len(attention_maps_per_step[step][\"mean\"])):  # Iterate over all layers\n",
-    "        attn_map = attention_maps_per_step[step][\"mean\"][layer_idx]\n",
+    "    for layer_idx in range(len(attention_maps_per_step[step][\"all\"])):  # Iterate over all layers\n",
+    "        attn_map = attention_maps_per_step[step][\"all\"][layer_idx]\n",
     "        print(f\"Step {step} - Layer {layer_idx} Attention Map Shape: {attn_map.shape}\")\n",
     "\n",
-    "        # Overlay attention on the corresponding input image\n",
-    "        blended_image = overlay_attention_on_image(images[step], attn_map, patch_size=patch_size)\n",
-    "\n",
-    "        # Convert to RGB (for video saving)\n",
-    "        video_frame = cv2.cvtColor(blended_image, cv2.COLOR_BGR2RGB)\n",
-    "        video_frames.append(video_frame)\n",
-    "\n",
-    "        # Display the image (optional)\n",
-    "        plt.imshow(blended_image)\n",
-    "        plt.axis(\"off\")\n",
-    "        plt.title(f\"Step {step} - Layer {layer_idx}\")\n",
-    "        plt.show()\n",
-    "\n",
-    "# Save the attention visualization as a video\n",
-    "output_video_path = \"attention_evolution.mp4\"\n",
-    "imageio.mimsave(output_video_path, video_frames, fps=10)\n",
-    "\n",
-    "print(f\"Attention visualization video saved to {output_video_path}\")\n",
-    "\n",
+    "#         # Overlay attention on the corresponding input image\n",
+    "#         blended_image = overlay_attention_on_image(images[step], attn_map, patch_size=patch_size)\n",
+    "#\n",
+    "#         # Convert to RGB (for video saving)\n",
+    "#         video_frame = cv2.cvtColor(blended_image, cv2.COLOR_BGR2RGB)\n",
+    "#         video_frames.append(video_frame)\n",
+    "#\n",
+    "#         # Display the image (optional)\n",
+    "#         plt.imshow(blended_image)\n",
+    "#         plt.axis(\"off\")\n",
+    "#         plt.title(f\"Step {step} - Layer {layer_idx}\")\n",
+    "#         plt.show()\n",
+    "#\n",
+    "# # Save the attention visualization as a video\n",
+    "# output_video_path = \"attention_evolution.mp4\"\n",
+    "# imageio.mimsave(output_video_path, video_frames, fps=10)\n",
+    "#\n",
+    "# print(f\"Attention visualization video saved to {output_video_path}\")\n",
+    "#\n",
     "# Display video if running in Jupyter Notebook\n",
-    "from IPython.display import Video\n",
-    "Video(\"attention_evolution.mp4\", embed=True)\n"
+    "# from IPython.display import Video\n",
+    "# Video(\"attention_evolution.mp4\", embed=True)\n"
    ],
    "metadata": {
     "collapsed": false
